Upgrade to Gatling 3.4.1
We were on Gatling 2.3.1, which is rather old. The old Gatling did not support TLS v1.3, which is what the DMP requires.

Upgraded to the latest version. Then fixed up the migration changes so that the simulations run again.